# pyside2-setup

./: .gitattributes  .gitignore  .gitmodules  .qt-license-check.exclude  .travis.yml  ApiExtractorConfig.cmake.in  CHANGES.rst  CMakeLists.txt  ChangeLog  Doxyfile  FindApiExtractor.cmake.in  FindGeneratorRunner.cmake.in  GeneratorRunnerConfig.cmake.in  LICENSE.COMMERCIAL  MANIFEST.in  README.cmake.md  README.md  README.pyside2.md  README.pyside6.md  README.rst  README.shiboken2-generator.md  README.shiboken2.md  README.shiboken6-generator.md  README.shiboken6.md  README.txt  README_WIN.rst  README_from-5.4-to-5.5.md  abstractmetabuilder.cpp  abstractmetabuilder.h  abstractmetalang.cpp  abstractmetalang.h  apiextractor.cpp  apiextractor.h  apiextractor.pc.in  apiextractormacros.h  apiextractorversion.h.in  appveyor.yml  asttoxml.h  boostpythongenerator.cpp  boostpythongenerator.h  (+64 more)
ApiExtractor/tests/: CMakeLists.txt  testabstractmetaclass.cpp  testabstractmetaclass.h  testabstractmetatype.cpp  testabstractmetatype.h  testaddfunction.cpp  testaddfunction.h  testarrayargument.cpp  testarrayargument.h  testcodeinjection.cpp  testcodeinjection.h  testcontainer.cpp  testcontainer.h  testconversionoperator.cpp  testconversionoperator.h  testconversionruletag.cpp  testconversionruletag.h  testctorinformation.cpp  testctorinformation.h  testdroptypeentries.cpp  testdroptypeentries.h  testdtorinformation.cpp  testdtorinformation.h  testenum.cpp  testenum.h  testextrainclude.cpp  testextrainclude.h  testfunctiontag.cpp  testfunctiontag.h  testimplicitconversions.cpp  testimplicitconversions.h  testinserttemplate.cpp  testinserttemplate.h  testmodifydocumentation.cpp  testmodifydocumentation.h  testmodifyfunction.cpp  testmodifyfunction.h  testmultipleinheritance.cpp  testmultipleinheritance.h  testnamespace.cpp  (+32 more)
PySide/: CMakeLists.txt  global.h.in  pysideqtesttouch.h  qpytextobject.h  typesystem_templates.xml
PySide/QtConcurrent/: CMakeLists.txt  typesystem_concurrent.xml
PySide/QtCore/: CMakeLists.txt  typesystem_core_common.xml  typesystem_core_mac.xml  typesystem_core_win.xml  typesystem_core_x11.xml
PySide/QtDeclarative/: CMakeLists.txt  curr_errors.txt  typesystem_declarative.xml
PySide/QtGui/: CMakeLists.txt  curr_errors.txt  typesystem_gui_common.xml  typesystem_gui_mac.xml  typesystem_gui_win.xml
PySide/QtHelp/: CMakeLists.txt  typesystem_help.xml
PySide/QtMultimedia/: CMakeLists.txt  typesystem_multimedia.xml
PySide/QtNetwork/: CMakeLists.txt  curr_errors.txt  typesystem_network.xml
PySide/QtOpenGL/: CMakeLists.txt
PySide/QtPrintSupport/: CMakeLists.txt
PySide/QtScript/: CMakeLists.txt
PySide/QtScriptTools/: CMakeLists.txt
PySide/QtSql/: CMakeLists.txt  curr_errors.txt  typesystem_sql.xml
PySide/QtSvg/: CMakeLists.txt  typesystem_svg.xml
PySide/QtTest/: CMakeLists.txt  curr_errors.txt  typesystem_test.xml  unresolved_warnings.txt
PySide2/: CMakeLists.txt  _utils.py.in  global.h.in  pysideqtesttouch.h  qpytextobject.h  typesystem_templates.xml
data/: ApiExtractorConfig.cmake.in  ApiExtractorConfigVersion.cmake.in  CMakeLists.txt  GeneratorRunnerConfig.cmake.in  GeneratorRunnerConfigVersion.cmake.in  Shiboken2Config-spec.cmake.in  Shiboken2Config.cmake.in  Shiboken2ConfigVersion.cmake.in  ShibokenConfig-spec.cmake.in  ShibokenConfig.cmake.in  ShibokenConfigVersion.cmake.in  apiextractor.pc.in  generatorrunner.1  generatorrunner.pc.in  shiboken.pc.in  shiboken2.pc.in
generator/: CMakeLists.txt  cppgenerator.cpp  cppgenerator.h  generator.cpp  generator.h  headergenerator.cpp  headergenerator.h  main.cpp  overloaddata.cpp  shiboken.cpp  shibokenconfig.h.in  shibokengenerator.cpp  shibokengenerator.h  shibokennormalize.cpp  shibokennormalize_p.h
generators/: CMakeLists.txt  main.cpp
libpyside/: CMakeLists.txt  PySide2Config-spec.cmake.in  PySide2Config.cmake.in  PySideConfig-spec.cmake.in  PySideConfig.cmake.in  destroylistener.h  dynamicqmetaobject.cpp  dynamicqmetaobject.h  dynamicqmetaobject_p.h  globalreceiver.cpp  globalreceiver.h  globalreceiverv2.cpp  globalreceiverv2.h  pyside.cpp  pyside.h  pyside2.pc.in  pysideclassinfo.cpp  pysideclassinfo.h  pysideclassinfo_p.h  pysideconversions.h  pysidemetafunction.cpp  pysidemetafunction.h  pysidemetafunction_p.h  pysideproperty.cpp  pysideqflags.cpp  pysidesignal.cpp  pysidesignal.h  pysidesignal_p.h  pysideslot.cpp  pysideslot_p.h  pysideweakref.cpp  signalmanager.cpp  signalmanager.cpp.in  signalmanager.h
libshiboken/: CMakeLists.txt  FindShiboken.cmake.in  ShibokenConfig.cmake.in  ShibokenConfigVersion.cmake.in  autodecref.h  basewrapper.cpp  basewrapper.h  basewrapper_p.h  bindingmanager.cpp  bindingmanager.h  containers.cpp  containers.h  conversions.h  debugfreehook.cpp  debugfreehook.h  gilstate.cpp  gilstate.h  helper.cpp  helper.h  pyenum.cpp  pyenum.h  python25compat.h  sbkconverter.cpp  sbkconverter.h  sbkconverter_p.h  sbkdbg.h  sbkenum.cpp  sbkenum.h  sbkenum_p.h  sbkmodule.cpp  sbkmodule.h  sbkpython.h  sbkstring.cpp  sbkstring.h  sbkversion.h.in  shiboken.h  shiboken.pc.in  shibokenbuffer.cpp  shibokenbuffer.h  shibokenmacros.h  (+4 more)
plugins/: CMakeLists.txt  customwidget.cpp  customwidget.h  customwidgets.cpp  customwidgets.h
tests/: CMakeLists.txt  Makefile  foo_test.py  py3kcompat.py  run_test.sh  sphinxtabletest.cpp  sphinxtabletest.h  testabstractmetaclass.cpp  testabstractmetaclass.h  testabstractmetatype.cpp  testabstractmetatype.h  testaddfunction.cpp  testaddfunction.h  testcodeinjection.cpp  testcodeinjection.h  testcontainer.cpp  testcontainer.h  testconversionoperator.cpp  testconversionoperator.h  testconversionruletag.cpp  testconversionruletag.h  testctorinformation.cpp  testctorinformation.h  testdroptypeentries.cpp  testdroptypeentries.h  testenum.cpp  testenum.h  testextrainclude.cpp  testfunctiontag.cpp  testfunctiontag.h  testimplicitconversions.cpp  testimplicitconversions.h  testmodifydocumentation.cpp  testmodifydocumentation.h  testmodifyfunction.cpp  testmodifyfunction.h  testmultipleinheritance.h  testnamespace.cpp  testnamespace.h  testnestedtypes.cpp  (+19 more)
(+5617 files in other folders)
